extras/alpha-cluster/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  generation: 2
  name: wdldt-astro-ingress
  namespace: astroshop
spec:
  rules:
  - host: astro.whydevslovedynatrace.com
    http:
      paths:
      - backend:
          service:
            name: astroshop-frontendproxy
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - astro.whydevslovedynatrace.com
    secretName: wdldt-astro-tls
